Add app_init for custom RTOS initialization
- Create app_init.cpp with custom initialization flow
- Move osKernelInitialize/Start from main.c to app_init()
- Add UART DMA support for debug output
- Enable HAL_UART_REGISTER_CALLBACKS for callback registration
- Define CMSIS-RTOS v1/v2 compatible task priorities

--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
@@ -29,6 +29,26 @@ CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_SIZ
 CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_SIZE_128KB
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7.default_mode_Activation=1
+Dma.Request0=USART3_TX
+Dma.RequestsNb=1
+Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.0.EventEnable=DISABLE
+Dma.USART3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.0.Instance=DMA2_Stream7
+Dma.USART3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.0.Mode=DMA_NORMAL
+Dma.USART3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.0.RequestNumber=1
+Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.0.SignalID=NONE
+Dma.USART3_TX.0.SyncEnable=DISABLE
+Dma.USART3_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.0.SyncRequestNumber=1
+Dma.USART3_TX.0.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FDCAN1.AutoRetransmission=ENABLE
@@ -92,29 +112,30 @@ Mcu.CPN=STM32H753ZIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=RCC
-Mcu.IP11=SDMMC1
-Mcu.IP12=SPI1
-Mcu.IP13=SPI4
-Mcu.IP14=SYS
-Mcu.IP15=TIM2
-Mcu.IP16=TIM3
-Mcu.IP17=TIM4
-Mcu.IP18=TIM5
-Mcu.IP19=TIM12
-Mcu.IP2=ETH
-Mcu.IP20=USART1
-Mcu.IP21=USART3
-Mcu.IP22=USB_OTG_FS
-Mcu.IP23=NUCLEO-H753ZI
-Mcu.IP3=FDCAN1
-Mcu.IP4=FREERTOS
-Mcu.IP5=I2C2
-Mcu.IP6=LWIP
-Mcu.IP7=MEMORYMAP
-Mcu.IP8=NVIC
-Mcu.IP9=QUADSPI
-Mcu.IPNb=24
+Mcu.IP10=QUADSPI
+Mcu.IP11=RCC
+Mcu.IP12=SDMMC1
+Mcu.IP13=SPI1
+Mcu.IP14=SPI4
+Mcu.IP15=SYS
+Mcu.IP16=TIM2
+Mcu.IP17=TIM3
+Mcu.IP18=TIM4
+Mcu.IP19=TIM5
+Mcu.IP2=DMA
+Mcu.IP20=TIM12
+Mcu.IP21=USART1
+Mcu.IP22=USART3
+Mcu.IP23=USB_OTG_FS
+Mcu.IP24=NUCLEO-H753ZI
+Mcu.IP3=ETH
+Mcu.IP4=FDCAN1
+Mcu.IP5=FREERTOS
+Mcu.IP6=I2C2
+Mcu.IP7=LWIP
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NVIC
+Mcu.IPNb=25
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -194,6 +215,7 @@ Mcu.UserName=STM32H753ZITx
 MxCube.Version=6.16.1
 MxDb.Version=DB.6.0.161
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -452,7 +474,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
 ProjectManager.ProjectName=STM32ZERO-DEMO-NUCLEO-H753ZI
 ProjectManager.ProjectStructure=
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=UART,USART
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=CMake
 ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:Default,
@@ -460,7 +482,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM12_Init-TIM12-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM5_Init-TIM5-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_QUADSPI_Init-QUADSPI-false-HAL-true,11-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,12-MX_I2C2_Init-I2C2-false-HAL-true,13-MX_SPI1_Init-SPI1-false-HAL-true,14-MX_SPI4_Init-SPI4-false-HAL-true,15-MX_FDCAN1_Init-FDCAN1-false-HAL-true,16-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,17-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_FDCAN1_Init-FDCAN1-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=48000000
 RCC.AHB12Freq_Value=240000000
