--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
@@ -234,6 +234,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_Speed_Default_HIGH
 PA1.GPIO_Speed_Default_HIGH=GPIO_SPEED_FREQ_HIGH
@@ -476,7 +477,7 @@ ProjectManager.ProjectName=STM32ZERO-DEMO-NUCLEO-H753ZI
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=UART,USART
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
