--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
@@ -30,7 +30,26 @@ CORTEX_M7.Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_SIZ
 CORTEX_M7.TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_TEX_LEVEL1
 CORTEX_M7.default_mode_Activation=1
 Dma.Request0=USART3_TX
-Dma.RequestsNb=1
+Dma.Request1=USART3_RX
+Dma.RequestsNb=2
+Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.1.EventEnable=DISABLE
+Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.1.Instance=DMA2_Stream6
+Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.1.Mode=DMA_NORMAL
+Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.1.RequestNumber=1
+Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_RX.1.SignalID=NONE
+Dma.USART3_RX.1.SyncEnable=DISABLE
+Dma.USART3_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_RX.1.SyncRequestNumber=1
+Dma.USART3_RX.1.SyncSignalID=NONE
 Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.USART3_TX.0.EventEnable=DISABLE
 Dma.USART3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -215,6 +234,7 @@ Mcu.UserName=STM32H753ZITx
 MxCube.Version=6.16.1
 MxDb.Version=DB.6.0.161
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
