--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
@@ -142,11 +142,12 @@ Mcu.IP17=TIM3
 Mcu.IP18=TIM4
 Mcu.IP19=TIM5
 Mcu.IP2=DMA
-Mcu.IP20=TIM12
-Mcu.IP21=USART1
-Mcu.IP22=USART3
-Mcu.IP23=USB_OTG_FS
-Mcu.IP24=NUCLEO-H753ZI
+Mcu.IP20=TIM8
+Mcu.IP21=TIM12
+Mcu.IP22=USART1
+Mcu.IP23=USART3
+Mcu.IP24=USB_OTG_FS
+Mcu.IP25=NUCLEO-H753ZI
 Mcu.IP3=ETH
 Mcu.IP4=FDCAN1
 Mcu.IP5=FREERTOS
@@ -154,7 +155,7 @@ Mcu.IP6=I2C2
 Mcu.IP7=LWIP
 Mcu.IP8=MEMORYMAP
 Mcu.IP9=NVIC
-Mcu.IPNb=25
+Mcu.IPNb=26
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -221,13 +222,15 @@ Mcu.Pin63=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin64=VP_TIM4_VS_ControllerModeClock
 Mcu.Pin65=VP_TIM4_VS_ClockSourceITR
 Mcu.Pin66=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin67=VP_TIM12_VS_ControllerModeClock
-Mcu.Pin68=VP_TIM12_VS_ClockSourceITR
-Mcu.Pin69=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin67=VP_TIM8_VS_ControllerModeClock
+Mcu.Pin68=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin69=VP_TIM12_VS_ControllerModeClock
 Mcu.Pin7=PF8
+Mcu.Pin70=VP_TIM12_VS_ClockSourceITR
+Mcu.Pin71=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin8=PF9
 Mcu.Pin9=PF10
-Mcu.PinsNb=70
+Mcu.PinsNb=72
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -503,7 +506,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_FDCAN1_Init-FDCAN1-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_FDCAN1_Init-FDCAN1-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-false,19-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=48000000
 RCC.AHB12Freq_Value=240000000
@@ -635,9 +638,10 @@ TIM3.Prescaler=(240-1) /* 240Mhz / 240 \= 1Mhz \= 1us */
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM4.IPParameters=TIM_MasterOutputTrigger
 TIM4.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
-TIM5.IPParameters=Prescaler
+TIM5.IPParameters=Prescaler,TIM_MasterOutputTrigger
 TIM5.IPParametersWithoutCheck=Prescaler
-TIM5.Prescaler=0 /* fdcan1_soc, USBx_SOF */
+TIM5.Prescaler=(240-1) /* 240Mhz / 240 \= 1Mhz \= 1us */ /* fdcan1_soc, USBx_SOF */
+TIM5.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART3.IPParameters=VirtualMode-Asynchronous
@@ -666,6 +670,10 @@ VP_TIM4_VS_ControllerModeClock.Mode=Clock Mode
 VP_TIM4_VS_ControllerModeClock.Signal=TIM4_VS_ControllerModeClock
 VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR3
+VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
+VP_TIM8_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM8_VS_ControllerModeClock.Signal=TIM8_VS_ControllerModeClock
 board=NUCLEO-H753ZI
 boardIOC=true
 rtos.0.ip=FREERTOS
