--- a/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
+++ b/STM32ZERO-DEMO-NUCLEO-H753ZI/STM32ZERO-DEMO-NUCLEO-H753ZI.ioc
@@ -3,6 +3,7 @@ BSP_IP_NAME=NUCLEO-H753ZI
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_FULL_ACCESS
 CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_FULL_ACCESS
 CORTEX_M7.AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_FULL_ACCESS
 CORTEX_M7.BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=0x30020000 /* SRAM2 */
@@ -16,7 +17,7 @@ CORTEX_M7.DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_INS
 CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S=MPU_REGION_ENABLE
 CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_REGION_ENABLE
 CORTEX_M7.Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_REGION_ENABLE
-CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,default_mode_Activation,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S
+CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control,default_mode_Activation,Enable_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,TypeExtField_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsCacheable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,Enable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,Size_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,DisableExec_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,IsShareable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,IsBufferable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region3_Settings_S,AccessPermission_S-Cortex_Memory_Protection_Unit_Region1_Settings_S
 CORTEX_M7.IPParametersWithoutCheck=BaseAddress_S-Cortex_Memory_Protection_Unit_Region2_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region1_Settings_S,BaseAddress_S-Cortex_Memory_Protection_Unit_Region3_Settings_S
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region2_Settings_S=MPU_ACCESS_BUFFERABLE
 CORTEX_M7.IsBufferable_S-Cortex_Memory_Protection_Unit_Region3_Settings_S=MPU_ACCESS_BUFFERABLE
@@ -79,7 +80,6 @@ FDCAN1.DataTimeSeg1=14
 FDCAN1.DataTimeSeg2=5
 FDCAN1.FrameFormat=FDCAN_FRAME_FD_BRS
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,TxFifoQueueElmtsNbr,FrameFormat,AutoRetransmission,DataPrescaler,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,RxFifo0ElmtsNbr,RxFifo0ElmtSize,RxFifo1ElmtSize,RxFifo1ElmtsNbr,RxBuffersNbr,RxBufferSize,TxElmtSize,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,TxBuffersNbr
-FDCAN1.IPParametersWithoutCheck=TxBuffersNbr
 FDCAN1.NominalPrescaler=2
 FDCAN1.NominalTimeSeg1=14
 FDCAN1.NominalTimeSeg2=5
@@ -90,9 +90,22 @@ FDCAN1.RxFifo0ElmtsNbr=1
 FDCAN1.RxFifo1ElmtSize=FDCAN_DATA_BYTES_64
 FDCAN1.RxFifo1ElmtsNbr=1
 FDCAN1.StdFiltersNbr=1
-FDCAN1.TxBuffersNbr=0
+FDCAN1.TxBuffersNbr=31
 FDCAN1.TxElmtSize=FDCAN_DATA_BYTES_64
 FDCAN1.TxFifoQueueElmtsNbr=1
+FDCAN2.AutoRetransmission=ENABLE
+FDCAN2.CalculateBaudRateNominal=1666666
+FDCAN2.CalculateTimeBitNominal=600
+FDCAN2.CalculateTimeQuantumNominal=200.0
+FDCAN2.DataPrescaler=2
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxFifoQueueElmtsNbr,AutoRetransmission,DataPrescaler,TxBuffersNbr,MessageRAMOffset
+FDCAN2.IPParametersWithoutCheck=TxBuffersNbr
+FDCAN2.MessageRAMOffset=1280
+FDCAN2.RxBuffersNbr=1
+FDCAN2.RxFifo0ElmtsNbr=1
+FDCAN2.RxFifo1ElmtsNbr=1
+FDCAN2.TxBuffersNbr=1
+FDCAN2.TxFifoQueueElmtsNbr=0
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=65536
@@ -131,31 +144,33 @@ Mcu.CPN=STM32H753ZIT6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=QUADSPI
-Mcu.IP11=RCC
-Mcu.IP12=SDMMC1
-Mcu.IP13=SPI1
-Mcu.IP14=SPI4
-Mcu.IP15=SYS
-Mcu.IP16=TIM2
-Mcu.IP17=TIM3
-Mcu.IP18=TIM4
-Mcu.IP19=TIM5
+Mcu.IP10=NVIC
+Mcu.IP11=PWR
+Mcu.IP12=QUADSPI
+Mcu.IP13=RCC
+Mcu.IP14=SDMMC1
+Mcu.IP15=SPI1
+Mcu.IP16=SPI4
+Mcu.IP17=SYS
+Mcu.IP18=TIM2
+Mcu.IP19=TIM3
 Mcu.IP2=DMA
-Mcu.IP20=TIM8
-Mcu.IP21=TIM12
-Mcu.IP22=USART1
-Mcu.IP23=USART3
-Mcu.IP24=USB_OTG_FS
-Mcu.IP25=NUCLEO-H753ZI
+Mcu.IP20=TIM4
+Mcu.IP21=TIM5
+Mcu.IP22=TIM8
+Mcu.IP23=TIM12
+Mcu.IP24=USART1
+Mcu.IP25=USART3
+Mcu.IP26=USB_OTG_FS
+Mcu.IP27=NUCLEO-H753ZI
 Mcu.IP3=ETH
 Mcu.IP4=FDCAN1
-Mcu.IP5=FREERTOS
-Mcu.IP6=I2C2
-Mcu.IP7=LWIP
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NVIC
-Mcu.IPNb=26
+Mcu.IP5=FDCAN2
+Mcu.IP6=FREERTOS
+Mcu.IP7=I2C2
+Mcu.IP8=LWIP
+Mcu.IP9=MEMORYMAP
+Mcu.IPNb=28
 Mcu.Name=STM32H753ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -163,74 +178,81 @@ Mcu.Pin1=PC13
 Mcu.Pin10=PH0-OSC_IN (PH0)
 Mcu.Pin11=PH1-OSC_OUT (PH1)
 Mcu.Pin12=PC1
-Mcu.Pin13=PA1
-Mcu.Pin14=PA2
-Mcu.Pin15=PA4
-Mcu.Pin16=PA7
-Mcu.Pin17=PC4
-Mcu.Pin18=PC5
-Mcu.Pin19=PB0
+Mcu.Pin13=PA0
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA4
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
 Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin20=PE11
-Mcu.Pin21=PE12
-Mcu.Pin22=PE13
-Mcu.Pin23=PE14
-Mcu.Pin24=PB10
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PB15
-Mcu.Pin28=PD8
-Mcu.Pin29=PD9
+Mcu.Pin20=PB0
+Mcu.Pin21=PG0
+Mcu.Pin22=PG1
+Mcu.Pin23=PE11
+Mcu.Pin24=PE12
+Mcu.Pin25=PE13
+Mcu.Pin26=PE14
+Mcu.Pin27=PB10
+Mcu.Pin28=PB11
+Mcu.Pin29=PB12
 Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin30=PD10
-Mcu.Pin31=PG7
-Mcu.Pin32=PG8
-Mcu.Pin33=PC6
-Mcu.Pin34=PC7
-Mcu.Pin35=PC8
-Mcu.Pin36=PC9
-Mcu.Pin37=PA8
-Mcu.Pin38=PA9
-Mcu.Pin39=PA10
+Mcu.Pin30=PB13
+Mcu.Pin31=PB14
+Mcu.Pin32=PB15
+Mcu.Pin33=PD8
+Mcu.Pin34=PD9
+Mcu.Pin35=PD10
+Mcu.Pin36=PG7
+Mcu.Pin37=PG8
+Mcu.Pin38=PC6
+Mcu.Pin39=PC7
 Mcu.Pin4=PF0
-Mcu.Pin40=PA11
-Mcu.Pin41=PA12
-Mcu.Pin42=PA13 (JTMS/SWDIO)
-Mcu.Pin43=PA14 (JTCK/SWCLK)
-Mcu.Pin44=PC10
-Mcu.Pin45=PC11
-Mcu.Pin46=PC12
-Mcu.Pin47=PD0
-Mcu.Pin48=PD1
-Mcu.Pin49=PD2
+Mcu.Pin40=PC8
+Mcu.Pin41=PC9
+Mcu.Pin42=PA8
+Mcu.Pin43=PA9
+Mcu.Pin44=PA10
+Mcu.Pin45=PA11
+Mcu.Pin46=PA12
+Mcu.Pin47=PA13 (JTMS/SWDIO)
+Mcu.Pin48=PA14 (JTCK/SWCLK)
+Mcu.Pin49=PC10
 Mcu.Pin5=PF1
-Mcu.Pin50=PG11
-Mcu.Pin51=PG13
-Mcu.Pin52=PB3 (JTDO/TRACESWO)
-Mcu.Pin53=PB4 (NJTRST)
-Mcu.Pin54=PB5
-Mcu.Pin55=PB7
-Mcu.Pin56=PB8
-Mcu.Pin57=PB9
-Mcu.Pin58=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin59=VP_LWIP_VS_Enabled
+Mcu.Pin50=PC11
+Mcu.Pin51=PC12
+Mcu.Pin52=PD0
+Mcu.Pin53=PD1
+Mcu.Pin54=PD2
+Mcu.Pin55=PG11
+Mcu.Pin56=PG13
+Mcu.Pin57=PB3 (JTDO/TRACESWO)
+Mcu.Pin58=PB4 (NJTRST)
+Mcu.Pin59=PB5
 Mcu.Pin6=PF6
-Mcu.Pin60=VP_SYS_VS_tim17
-Mcu.Pin61=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin62=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin63=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin64=VP_TIM4_VS_ControllerModeClock
-Mcu.Pin65=VP_TIM4_VS_ClockSourceITR
-Mcu.Pin66=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin67=VP_TIM8_VS_ControllerModeClock
-Mcu.Pin68=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin69=VP_TIM12_VS_ControllerModeClock
+Mcu.Pin60=PB6
+Mcu.Pin61=PB7
+Mcu.Pin62=PB8
+Mcu.Pin63=PB9
+Mcu.Pin64=PE0
+Mcu.Pin65=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin66=VP_LWIP_VS_Enabled
+Mcu.Pin67=VP_SYS_VS_tim17
+Mcu.Pin68=VP_TIM2_VS_ControllerModeClock
+Mcu.Pin69=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin7=PF8
-Mcu.Pin70=VP_TIM12_VS_ClockSourceITR
-Mcu.Pin71=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin70=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin71=VP_TIM4_VS_ControllerModeClock
+Mcu.Pin72=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin73=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin74=VP_TIM8_VS_ControllerModeClock
+Mcu.Pin75=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin76=VP_TIM12_VS_ControllerModeClock
+Mcu.Pin77=VP_TIM12_VS_ClockSourceITR
+Mcu.Pin78=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin8=PF9
 Mcu.Pin9=PF10
-Mcu.PinsNb=72
+Mcu.PinsNb=79
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H753ZITx
@@ -243,6 +265,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:fals
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN_CAL_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -259,6 +282,8 @@ NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0.Mode=WakeUp1
+PA0.Signal=PWR_WKUP1
 PA1.GPIOParameters=GPIO_Speed_Default_HIGH
 PA1.GPIO_Speed_Default_HIGH=GPIO_SPEED_FREQ_HIGH
 PA1.Mode=RMII_PTP_Synchro
@@ -306,6 +331,12 @@ PB10.GPIOParameters=GPIO_Speed
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB10.Mode=Single Bank 1
 PB10.Signal=QUADSPI_BK1_NCS
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=TP1 (CN10 / 34)
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.Mode=FDCAN_Activate
+PB12.Signal=FDCAN2_RX
 PB13.GPIOParameters=GPIO_Speed_Default_HIGH
 PB13.GPIO_Speed_Default_HIGH=GPIO_SPEED_FREQ_HIGH
 PB13.Mode=RMII_PTP_Synchro
@@ -333,6 +364,8 @@ PB5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB5.Locked=true
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.Mode=FDCAN_Activate
+PB6.Signal=FDCAN2_TX
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 (Blue)
 PB7.Locked=true
@@ -386,11 +419,11 @@ PC9.GPIO_Speed_High_Default=GPIO_SPEED_FREQ_HIGH
 PC9.Mode=mmc_8_bits_Wide_bus
 PC9.Signal=SDMMC1_D1
 PD0.GPIOParameters=GPIO_Speed
-PD0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PD0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD0.Mode=FDCAN_Activate
 PD0.Signal=FDCAN1_RX
 PD1.GPIOParameters=GPIO_Speed
-PD1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PD1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD1.Mode=FDCAN_Activate
 PD1.Signal=FDCAN1_TX
 PD10.GPIOParameters=GPIO_Label
@@ -411,6 +444,10 @@ PD9.GPIO_Label=STLINK_RX
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=TP0 (CN10 / 33)
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE11.Locked=true
 PE11.Mode=NSS_Signal_Hard_Output
 PE11.Signal=SPI4_NSS
@@ -447,6 +484,14 @@ PF9.GPIOParameters=GPIO_Speed
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PF9.Mode=Single Bank 1
 PF9.Signal=QUADSPI_BK1_IO1
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=STBY1 (CN9 / 29)
+PG0.Locked=true
+PG0.Signal=GPIO_Output
+PG1.GPIOParameters=GPIO_Label
+PG1.GPIO_Label=FDCAN1_RX_EXTI
+PG1.Locked=true
+PG1.Signal=GPXTI1
 PG11.GPIOParameters=GPIO_Speed_Default_HIGH
 PG11.GPIO_Speed_Default_HIGH=GPIO_SPEED_FREQ_HIGH
 PG11.Locked=true
@@ -506,7 +551,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_FDCAN1_Init-FDCAN1-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-false,19-MX_TIM8_Init-TIM8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM5_Init-TIM5-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_QUADSPI_Init-QUADSPI-false-HAL-true,12-MX_SDMMC1_MMC_Init-SDMMC1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_SPI1_Init-SPI1-false-HAL-true,15-MX_SPI4_Init-SPI4-false-HAL-true,16-MX_FDCAN1_Init-FDCAN1-false-HAL-true,17-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,18-MX_LWIP_Init-LWIP-false-HAL-false,19-MX_TIM8_Init-TIM8-false-HAL-true,20-MX_FDCAN2_Init-FDCAN2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=48000000
 RCC.AHB12Freq_Value=240000000
@@ -546,7 +591,8 @@ RCC.DIVQ3=20
 RCC.DIVQ3Freq_Value=48000000
 RCC.DIVR1=10
 RCC.DIVR1Freq_Value=96000000
-RCC.DIVR2Freq_Value=480000000
+RCC.DIVR2=10
+RCC.DIVR2Freq_Value=96000000
 RCC.DIVR3=20
 RCC.DIVR3Freq_Value=48000000
 RCC.FDCANFreq_Value=80000000
@@ -560,7 +606,7 @@ RCC.HSE_VALUE=8000000
 RCC.I2C123CLockSelection=RCC_I2C123CLKSOURCE_PLL3
 RCC.I2C123Freq_Value=48000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123CLockSelection,I2C123Freq_Value,I2C4Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Spi45ClockSelection,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123CLockSelection,I2C123Freq_Value,I2C4Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPICLockSelection,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Spi45ClockSelection,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1CLockSelection=RCC_LPTIM1CLKSOURCE_PLL2
 RCC.LPTIM1Freq_Value=80000000
 RCC.LPTIM2Freq_Value=120000000
@@ -606,6 +652,8 @@ RCC.VCOInput2Freq_Value=2000000
 RCC.VCOInput3Freq_Value=2000000
 SDMMC1.ClockDiv=1
 SDMMC1.IPParameters=ClockDiv
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
