--- a/STM32ZERO-DEMO-WeACT-H503/STM32ZERO-DEMO-WeACT-H503.ioc
+++ b/STM32ZERO-DEMO-WeACT-H503/STM32ZERO-DEMO-WeACT-H503.ioc
@@ -7,6 +7,9 @@ ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
+BOOTPATH.BootPathName=LEGACY
+BOOTPATH.IPParameters=BootPathName
+BOOTPATH.UserSelectedBootPath=LEGACY
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -286,7 +289,7 @@ ProjectManager.ProjectName=STM32ZERO-DEMO-WeACT-H503
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=CMake
+ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ThreadSafeStrategy=Cortex-M33NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
@@ -323,12 +326,13 @@ RCC.I2C2Freq_Value=96000000
 RCC.I3C1CLockSelection=RCC_I3C1CLKSOURCE_PLL2R
 RCC.I3C1Freq_Value=96000000
 RCC.I3C2Freq_Value=240000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CKPERFreq_Value,CKPERSourceSelection,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I3C1CLockSelection,I3C1Freq_Value,I3C2Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,PLL1Q,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2R,PLL2RoutputFreq_Value,PLL2Source,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2Freq_Value,USART3CLockSelection,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CKPERFreq_Value,CKPERSourceSelection,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1CLockSelection,I2C1Freq_Value,I2C2CLockSelection,I2C2Freq_Value,I3C1CLockSelection,I3C1Freq_Value,I3C2Freq_Value,LPTIM1CLockSelection,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_Drive_Capability,LSIRC_VALUE,MCO1PinFreq_Value,PLL1Q,PLL2M,PLL2N,PLL2P,PLL2PoutputFreq_Value,PLL2Q,PLL2QoutputFreq_Value,PLL2R,PLL2RoutputFreq_Value,PLL2Source,PLLM,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,RTCClockSelection,RTCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1CLockSelection,USART1Freq_Value,USART2Freq_Value,USART3CLockSelection,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value
 RCC.LPTIM1CLockSelection=RCC_LPTIM1CLKSOURCE_PLL2P
 RCC.LPTIM1Freq_Value=96000000
 RCC.LPTIM2Freq_Value=240000000
 RCC.LPUART1Freq_Value=240000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_Drive_Capability=RCC_LSEDRIVE_HIGH
 RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
 RCC.PLL1Q=5
@@ -375,7 +379,7 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.4.0.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.4.0.IPParameters=RTOS2CcCMSISJjRTOS2JjHeap,RTOS2CcCMSISJjRTOS2JjCore,configUSE_NEWLIB_REENTRANT
+STMicroelectronics.X-CUBE-FREERTOS.1.4.0.IPParameters=configUSE_NEWLIB_REENTRANT,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.4.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.4.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
 STMicroelectronics.X-CUBE-FREERTOS.1.4.0.configUSE_NEWLIB_REENTRANT=1
@@ -388,7 +392,7 @@ TIM3.IPParameters=TIM3_ETR_REMAP-TriggerSource_ETR_Remap_TIM3,TIM_MasterOutputTr
 TIM3.TIM3_ETR_REMAP-TriggerSource_ETR_Remap_TIM3=TIM_TIM3_ETR_TIM2_ETR
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode-Asynchronous,SwapParam
-USART1.SwapParam=ADVFEATURE_SWAP_ENABLE
+USART1.SwapParam=ADVFEATURE_SWAP_DISABLE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB.IPParameters=VirtualMode
 USB.VirtualMode=Device_Only
